# physical-ai-book

./: .specify~HEAD  404.html  CHATBOT_INTEGRATION_STATUS.md  Dockerfile  QWEN.md  README.md  README_RAG_CHATBOT.md  SPECKITPLUS_INTEGRATION.md  docker-compose.yml  docusaurus.config.ts  future_tech_landing.html  index.html  opensearch.xml  package-lock.json  populate_book_content.py  sitemap.xml  start_backend.bat  start_backend.sh  test_integration.py
.claude/: settings.local.json
.github/workflows/: deploy-backend.yml  deploy.yml
backend-chatbot/: .env.example  .gitignore  API_DOCUMENTATION.md  BACKEND_SETUP.md  README.md  requirements.txt  setup_backend_env.bat
backend-chatbot/backend/: pyproject.toml  run_server.py  run_server_mocked.py  test_api_fix.py  verify_fix.py  verify_fix_simple.py
backend-chatbot/backend/src/: ingest_book.py
backend-chatbot/backend/src/api/: main.py
backend-chatbot/backend/src/config/: config.py
backend-chatbot/backend/src/models/: chunk_metadata.py
backend-chatbot/backend/src/services/: ingestion.py  rag.py  vector_store.py
backend-chatbot/backend/src/utils/: text_splitter.py
backend-chatbot/backend/tests/unit/: test_core_functionality.py
blog/: atom.xml  index.html  rss.xml
chat/: index.html
cyberpunk-demo/: index.html
docs/: setup.md
features/: .env.example  .eslintrc.json  .gitignore  README.md  package.json  tsconfig.json
markdown-page/: index.html
physical-ai-book/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
scripts/: ingest_book_content.py
search/: index.html
(+348 files in other folders)
